--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     <div class="container">
         <h2 class="heading">Memory Game</h2>
         <div class="cards">
-      <!-- <div class = "bob">
-        <span class ="close">&times;</span>
-        <br></br>
-        <h2>YOU WON!!!</h2>  -->
+      <div id = "bob">
+        <h2>YOU WON!!!</h2> 
       </div>
           <div class="card" Sports="puck">
             <img src="./img/puck.png" alt="" />
